appId: web.codex.carousel
---
- openLink: http://127.0.0.1:3000
- tapOn: Add Account
- tapOn: Cancel
- tapOn: Advanced Settings
- assertVisible: Advanced Settings
- tapOn: Close
- tapOn: Add Account
- assertVisible: Add Account
